# NearalAneki

./: .gitignore  README.md  pyproject.toml
src/dataset_creation/: parsers.py  test.py
