[build-system]
requires = ["setuptools"]

[project]
name = "NeuralAneki"
authors = [
    {name = "Nikolai Makarov", email = "makarov.nikolai20@gmail.com"},
]
description = "In this project I'll try to train language model to generate russian anekdoty."
readme = "README.md"
requires-python = ">=3.10.6"
classifiers = [
    "Framework :: pytorch",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mypy >= 1.8.0",
    "pytest >= 7.4.4",
    "ruff >= 0.1.14",
]
version="1.0.1"

[tool.mypy]
exclude = "test.py$"
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
no_incremental = true
no_implicit_optional = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_any_generics = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
allow_untyped_decorators = true

[tool.ruff]
exclude = [
    "src/*/test.py"
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E2", "E4", "E7", "E9", "F"]
ignore = []
fixable = []
unfixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"